// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- dialog visible but upload not started. 1`] = `
Array [
  <div
    className="progress-num"
  >
    0
     / 
    5
  </div>,
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={5}
        aria-valuemin={0}
        aria-valuenow={0}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="upload-log-list"
  />,
]
`;

exports[`2- upload started. 1`] = `
Array [
  <div
    className="progress-num"
  >
    0
     / 
    5
  </div>,
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={5}
        aria-valuemin={0}
        aria-valuenow={0}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "0%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="upload-log-list"
  />,
]
`;

exports[`3- 2 files uploaded. 1`] = `
Array [
  <div
    className="progress-num"
  >
    2
     / 
    5
  </div>,
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={5}
        aria-valuemin={0}
        aria-valuenow={2}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "40%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="upload-log-list"
  >
    <div
      className="list-item list-item-success"
    >
      file2.json uploaded
    </div>
    <div
      className="list-item list-item-success"
    >
      file4.json uploaded
    </div>
  </div>,
]
`;

exports[`4- all files uploaded. 1`] = `
Array [
  <div
    className="progress-num"
  >
    3
     / 
    3
  </div>,
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={3}
        aria-valuemin={0}
        aria-valuenow={3}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="upload-log-list"
  >
    <div
      className="list-item list-item-success"
    >
      file2.json uploaded
    </div>
    <div
      className="list-item list-item-success"
    >
      file4.json uploaded
    </div>
    <div
      className="list-item list-item-success"
    >
      file1.json uploaded
    </div>
    <div
      className="list-item list-item-info"
    >
      3 files uploaded 🎉
    </div>
  </div>,
]
`;

exports[`5- finished with 1 fail. 1`] = `
Array [
  <div
    className="progress-num"
  >
    3
     / 
    3
  </div>,
  <div
    className="progress-percent"
  >
    <div
      className="progress"
    >
      <div
        aria-valuemax={3}
        aria-valuemin={0}
        aria-valuenow={3}
        className="progress-bar progress-bar-animated progress-bar-striped"
        role="progressbar"
        style={
          Object {
            "width": "100%",
          }
        }
      />
    </div>
  </div>,
  <div
    className="upload-log-list"
  >
    <div
      className="list-item list-item-success"
    >
      file2.json uploaded
    </div>
    <div
      className="list-item list-item-success"
    >
      file4.json uploaded
    </div>
    <div
      className="list-item list-item-success"
    >
      file1.json could not upload
    </div>
    <div
      className="list-item list-item-info"
    >
      2 files uploaded, 1 failed  👀
    </div>
  </div>,
  <div
    className="controls"
  >
    <button
      className="btn btn-outline-info btn-sm"
      disabled={false}
      onClick={[Function]}
      type="button"
    >
      Close
    </button>
  </div>,
]
`;
